--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -5,13 +5,11 @@ on:
       - LICENSE
       - README.*
       - examples
-      - .github/workflows
   pull_request:
     paths-ignore:
       - LICENSE
       - README.*
       - examples
-      - .github/workflows
 jobs:
   test:
     runs-on: ubuntu-latest
@@ -26,5 +24,5 @@ jobs:
           nim-version: ${{ matrix.nim-version }}
           repo-token: ${{ secrets.GITHUB_TOKEN }}
       - run: nimble install -Y
-      - run: nim c -r src/${{ github.event.repository.name }}.nim
+      - run: nim c -r src/duckdb.nim
       - run: nimble test
